--- a/core/designsystem/src/main/res/values/colors.xml
+++ b/core/designsystem/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_color">#80D7E0</color>
     <color name="transparent">#00000000</color>
+    <color name="sub_color_gray">#989898</color>
+    <color name="sub_color_gray2">#DEE2E6</color>
+    <color name="sub_color_text_gray">#948888</color>
 </resources>
