ui : add youtuber recyclerview

--- a/feature/home/src/main/res/layout/map_fragment.xml
+++ b/feature/home/src/main/res/layout/map_fragment.xml
@@ -10,6 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_influencer_chip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_influencer_chip" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_list_restaurant_dialog"
         android:layout_width="wrap_content"
