--- a/core/designsystem/src/main/res/values/colors.xml
+++ b/core/designsystem/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="sub_color_gray">#989898</color>
     <color name="sub_color_gray2">#DEE2E6</color>
     <color name="sub_color_text_gray">#948888</color>
+    <color name="btn_default_color">#80D7E0</color>
+    <color name="btn_pressed_color">#A4C4FF</color>
+    <color name="red">#FF0000</color>
+    <color name="naver_color">#03C75A</color>
+    <color name="kakao_color">#FEE500</color>
 </resources>
