--- a/core/designsystem/src/main/res/values/colors.xml
+++ b/core/designsystem/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="transparent">#00000000</color>
     <color name="sub_color_gray">#989898</color>
     <color name="sub_color_gray2">#DEE2E6</color>
+    <color name="sub_color_gray3">#48494B</color>
+    <color name="sub_color_gray4">#AEA8A8</color>
+    <color name="sub_color_gray5">#B3B3B3</color>
     <color name="sub_color_text_gray">#948888</color>
     <color name="btn_default_color">#80D7E0</color>
     <color name="btn_pressed_color">#A4C4FF</color>
