--- a/feature/list/src/main/res/layout/list_restaurant_fragment.xml
+++ b/feature/list/src/main/res/layout/list_restaurant_fragment.xml
@@ -32,6 +32,7 @@
             android:hint="검색어를 입력해주세요"
             android:padding="8dp"
             android:textSize="14sp"
+            android:focusable="false"
             app:layout_constraintEnd_toStartOf="@id/ib_list_restaurant_search"
             app:layout_constraintStart_toEndOf="@id/ib_list_restaurant_back"
             app:layout_constraintTop_toTopOf="parent" />
